--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -47,15 +47,6 @@ body {
   margin-top: -0.5rem;
 }
 
-@keyframes bounce {
-  50% {
-    transform: translateY(-12px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
-}
-
 /* Blogpost page styles */
 span[class="tag"]:not(body) {
   font-size: 1.5rem;
